[package]
name = "dnd_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.3.10", features = ["kv-rocksdb"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
